コードのリファクタリングとテストコード作成